--- a/.github/workflows/weekly-update.yml
+++ b/.github/workflows/weekly-update.yml
@@ -8,21 +8,34 @@ on:
 jobs:
   update:
     runs-on: ubuntu-latest
+    timeout-minutes: 360  # 6 hours total timeout
     env:
-      MONGO_URI: ${{ secrets.MONGO_URI }}  # Use secret in environment variable
+      MONGO_URI: ${{ secrets.MONGO_URI }}
+    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
+        
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.x'
-
+          
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install aiohttp pymongo
-
+          
       - name: Run weekly update
         run: python scripts/weekly_update.py
+        timeout-minutes: 330  # 5.5 hours for the script itself
+        
+      - name: Upload logs
+        if: always()  # Run even if the previous step fails
+        uses: actions/upload-artifact@v3
+        with:
+          name: update-logs-${{ github.run_id }}
+          path: |
+            scripts/logs/
+            scripts/update_checkpoint.txt
+          retention-days: 14
