--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@vercel/analytics": "^1.5.0",
     "mongodb": "^6.13.0",
     "next": "15.1.7",
     "posthog-js": "^1.223.3",
