--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+./scripts/data/*
 # dependencies
 *node_modules*
 *venv*
-*data*
 *__pycache__*
 /.pnp
 .pnp.*
