--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-./scripts/data/*
+scripts/data/*
 # dependencies
 *node_modules*
 *venv*
 *__pycache__*
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-
 # next.js
 /.next/
 /out/
@@ -43,5 +32,3 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-# my stuff
-*ephemeral.json
